--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -9,16 +9,16 @@
     - time
     - packages
     - users
+    - { role: ssd, tags: "ssd" }
     #    - { role: fonts, tags: "fonts" }
     - { role: shell, tags: "shell" }
     - { role: sway, tags: "sway" }
     - { role: dotfiles, tags: "dotfiles" }
     - { role: xdg-user-dirs, tags: "xdg-user-dirs" }
+  #    - { role: firewall, tags: "firewall" }
+  #    - { role: bluetooth, tags: "bluetooth" }
   #    - { role: flatpak, tags: "flatpak" }
   ##    - { role: dev-tools, tags: "dev-tools" }
-  #    - { role: firewall, tags: "firewall" }
-  #    - { role: ssd, tags: "ssd" }
-  #    - { role: bluetooth, tags: "bluetooth" }
   #    - { role: themes, tags: "themes" }
   #    - { role: yubikey, tags: "yubikey" }
   ##    - { role: office, tags: "office" }
