Wechsle system locale zu de_DE

--- a/ansible/roles/dotfiles/tasks/main.yml
+++ b/ansible/roles/dotfiles/tasks/main.yml
@@ -5,17 +5,13 @@
     package: chezmoi
 
 - name: Check if ~/.local/share/chezmoi exists
-  stat:
+  ansible.builtin.stat:
     path: ~/.local/share/chezmoi
   register: chezmoi_dir
 
 - name: Init chezmoi
   ansible.builtin.expect:
-    command: chezmoi init https://github.com/macGYves/dotfiles.git
+    command: chezmoi init --apply https://github.com/macGYves/dotfiles.git
     responses:
-      (email): "{{ user_email }}"
-  ansible.builtin.command:
+      email\?: "{{ user_email }}"
   when: not chezmoi_dir.stat.exists
-
-- name: chezmoi apply
-  ansible.builtin.command: chezmoi apply
