--- a/archinstall/thinx.config.json
+++ b/archinstall/thinx.config.json
@@ -24,7 +24,7 @@
   "script": "guided",
   "swap": false,
   "sys-encoding": "utf-8",
-  "sys-language": "en_US",
+  "sys-language": "de_DE",
   "timezone": "Europe/Stockholm",
   "version": "2.3.1"
 }
