--- a/ansible/roles/power_management/tasks/main.yml
+++ b/ansible/roles/power_management/tasks/main.yml
@@ -1,19 +1,18 @@
 ---
-
 - name: Install power management tools
-  become: yes
-  community.general.pacman:
-    pkg: tlp
+  block:
+    - name: Install TLP
+      community.general.pacman:
+        pkg: tlp
 
-- name: Init /etc/tlp.conf
-  become: yes
-  ansible.builtin.copy:
-    dest: /etc/tlp.conf
-    src: tlp.conf
+    - name: Init /etc/tlp.conf
+      ansible.builtin.copy:
+        dest: /etc/tlp.conf
+        src: tlp.conf
 
-- name: Enable tlp.service 
+    - name: Enable tlp.service
+      ansible.builtin.systemd:
+        name: tlp.service
+        state: started
+        enabled: yes
   become: yes
-  ansible.builtin.systemd:
-    name: tlp.service
-    state: started
-    enabled: yes
