--- a/ansible/roles/fonts/files/font.conf
+++ b/ansible/roles/fonts/files/font.conf
@@ -5,9 +5,6 @@
  <alias>
    <family>sans-serif</family>
    <prefer>
-     <family>Noto Sans</family>
-     <family>Noto Color Emoji</family>
-     <family>Noto Emoji</family>
      <family>DejaVu Sans</family>
    </prefer>
  </alias>
@@ -15,9 +12,6 @@
  <alias>
    <family>serif</family>
    <prefer>
-     <family>Noto Serif</family>
-     <family>Noto Color Emoji</family>
-     <family>Noto Emoji</family>
      <family>DejaVu Serif</family>
    </prefer>
  </alias>
@@ -25,10 +19,8 @@
  <alias>
   <family>monospace</family>
   <prefer>
-    <family>Noto Mono</family>
-    <family>Noto Color Emoji</family>
-    <family>Noto Emoji</family>
-   </prefer>
+    <family>Hack Nerd Font Mono</family>
+  </prefer>
  </alias>
 
 </fontconfig>
