--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -1,17 +1,26 @@
 ---
-- name: Clone asdf repository to {{ asdf.install_dir }}
-  git:
-    repo: https://github.com/asdf-vm/asdf.git
-    dest: "{{ asdf.install_dir }}"
-    version: "{{ asdf.version }}"
+- name: Install asdf dependencies
+  become: true
+  community.general.pacman:
+    package:
+      - git
+      - curl
 
-- name: List installed asdf plugins
-  command: "{{ asdf.bin }} plugin list"
-  register: installed_asdf_plugins
-  failed_when: false
-  changed_when: false
+- name: "Install dev tools via asdf"
+  include_role: markosamuli.asdf
+  vars:
+    asdf_init_shell: false
+    asdf_version: "{{ asdf.version }}"
+    asdf_user: "{{ ansible_user_id }}"
+    asdf_plugins:
+      - name: "java"
+        versions: "{{ jdk_versions }}"
+        global: "{{ jdk_versions[0] }}"
+      - name: "maven"
+        versions: "{{ maven_versions }}"
+        global: "{{ maven_versions[0] }}"
+      - name: "nodejs"
+        versions: "{{ nodejs_versions }}"
+        global: "{{ nodejs_versions[0] }}"
 
-- include_tasks: java.yml
-- include_tasks: maven.yml
-- include_tasks: node.yml
 - include_tasks: aws-cli.yml
