--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -24,7 +24,7 @@
         versions: "{{ nodejs.versions }}"
         global: "{{ nodejs.versions[0] }}"
       - name: "awscli"
-        versions: "latest"
-        global: ["latest"]
+        versions: ["latest"]
+        global: "latest"
 
 - include_tasks: aws-cli.yml
