--- a/ansible/roles/sway/tasks/main.yml
+++ b/ansible/roles/sway/tasks/main.yml
@@ -16,20 +16,25 @@
       - udiskie
       - waybar
 
-#- name: Install sway dependencies from AUR
-#  kewlfft.aur.aur:
-#    name:
-#      - swappy # screenshot-manipulating tool
-#      - azote # wallpaper manager
-#      - nwg-launchers # grid/bar launchers
-#      - autotiling # script for opening new windows more space-efficiently
-#      - wdisplays # tool for changing screen layouts dynamically
-#      - kanshi-git
-#      - wob # wayland overlay bar
-#    use: makepkg
-#    state: present
-#  become: yes
-#  become_user: aur_builder
+- name: Import wob maintainer gpg key
+  become: yes
+  become_user: aur_builder
+  command: gpg --receive-keys 5C6DA024DDE27178073EA103F4B432D5D67990E3
+
+- name: Install sway dependencies from AUR
+  kewlfft.aur.aur:
+    name:
+      - swappy # screenshot-manipulating tool
+      - azote # wallpaper manager
+      - nwg-launchers # grid/bar launchers
+      - autotiling # script for opening new windows more space-efficiently
+      - wdisplays # tool for changing screen layouts dynamically
+      - kanshi-git
+      - wob # wayland overlay bar
+    use: makepkg
+    state: present
+  become: yes
+  become_user: aur_builder
 
 - name: Enable and start systemd user services
   ansible.builtin.systemd:
@@ -38,11 +43,11 @@
     state: started
     enabled: yes
   loop:
-    #    - kanshi.service
+    - kanshi.service
     - udiskie.service
-    #    - nextcloud.service
+    - nextcloud.service
     - gammastep-indicator.service
-    #    - autotiling.service
+    - autotiling.service
     - mako.service
-#    - wob.socket
-#    - wob.service
+    - wob.socket
+    - wob.service
