--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -19,7 +19,7 @@
     - { role: fonts, tags: "fonts" }
     - { role: shell, tags: "shell" }
     - { role: dotfiles, tags: "dotfiles" }
-    - { role: sway, tags: "sway" }
+      #- { role: sway, tags: "sway" }
     - { role: xdg-user-dirs, tags: "xdg-user-dirs" }
     - { role: flatpak, tags: "flatpak" }
     - { role: dev-tools, tags: "dev-tools" }
