--- a/ansible/roles/dotfiles/tasks/main.yml
+++ b/ansible/roles/dotfiles/tasks/main.yml
@@ -10,8 +10,6 @@
   register: chezmoi_dir
 
 - name: Init chezmoi
-  ansible.builtin.expect:
-    command: chezmoi init --apply https://github.com/macGYves/dotfiles.git
-    responses:
-      email\?: "{{ user_email }}"
+  ansible.builtin.command:  chezmoi init --apply https://github.com/macGYves/dotfiles.git --promptString email={{ user_email }}
   when: not chezmoi_dir.stat.exists
+
