--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -29,8 +29,11 @@
 
 - include_tasks: aws-cli.yml
 
-- name: "Install VSCodium"
+- name: "Install IDEs"
   kewlfft.aur.aur:
-    name: vscodium
+    name:
+      - vscodium
+      - intellij-idea-ultimate-edition
   become: yes
   become_user: aur_builder
+
