--- a/ansible/roles/flatpak/tasks/main.yml
+++ b/ansible/roles/flatpak/tasks/main.yml
@@ -5,7 +5,7 @@
     pkg:
       - flatpak
       - xdg-desktop-portal-wlr
-      - pipewire-media-session
+      - wireplumber
 
 - name: Add the flathub flatpak repository remote to the user installation
   community.general.flatpak_remote:
