fix: Use become for enabling gdm&docker systemd modules

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -16,6 +16,7 @@
   when: user.name is defined
 
 - name: Start/Enable docker systemd service
+  become: yes
   ansible.builtin.systemd:
     name: docker.service
     state: started
