--- a/ansible/roles/dev-tools/vars/main.yml
+++ b/ansible/roles/dev-tools/vars/main.yml
@@ -5,13 +5,13 @@ asdf:
 
 maven:
   versions:
-    - "3.8.5"
+    - "3.9.1"
 
 jdk:
   versions:
-    - "adoptopenjdk-11.0.14+9"
-    - "graalvm-22.0.0.2+java17"
+    - "graalvm-22.3.0+java17"
+    - "temurin-17.0.7+7"
 
 nodejs:
   versions:
-    - "lts"
+    - "18.16.0"
