feat: install fwupd

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -40,6 +40,7 @@ packages:
     - pipewire-pulse
     - youtube-dl
     - task # taskwarrior
+    - fwupd # firmware-update daemon
 
 partitions:
   luks:
