feat(packages): Add transmission-gtk

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -41,6 +41,7 @@ packages:
     - youtube-dl
     - task # taskwarrior
     - fwupd # firmware-update daemon
+    - transmission-gtk
 
 partitions:
   luks:
