feat: write dconf values for gnome

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -33,6 +33,7 @@ packages:
     - nnn
     - python-pip
     - python-pexpect # required by ansible.builtin.expect
+    - python-psutil # required by community.general.dconf
     - vlc
     - firefox
     - chromium
