--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -13,7 +13,7 @@
       private: yes
   roles:
     - time
-    - packages
+    - { role: packages, tags: "packages" }
     - users
     - yay
     - { role: ssd, tags: "ssd" }
