feat(gnome): update gnome keybindings

--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -38,7 +38,7 @@ org_gnome_dconf:
   "/org/gnome/settings-daemon/plugins/media-keys/logout": "['<Control><Alt><Super>e']"
   "/org/gnome/settings-daemon/plugins/media-keys/screensaver": "['<Control><Alt><Super>l']"
   "/org/gnome/settings-daemon/plugins/media-keys/search": "['<Super>d']"
-  "/org/gnome/settings-daemon/plugins/media-keys/www": "@as []"
+  "/org/gnome/settings-daemon/plugins/media-keys/www": "['<Shift><Super>f']"
   "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/binding": "'<Super>Return'"
   "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/command": "'kgx'"
   "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/name": "'Konsole öffnen'"
@@ -51,7 +51,8 @@ org_gnome_dconf:
   "/org/gnome/shell/extensions/auto-move-windows/application-list": "['thunderbird.desktop:2', 'jetbrains-idea.desktop:3', 'signal-desktop.desktop:2', 'org.telegram.desktop.desktop:2', 'org.keepassxc.KeePassXC.desktop:4', 'org.gnome.Calendar.desktop:2']"
   "/org/gnome/shell/extensions/gtile/show-toggle-tiling-alt": "['<Control><Super>KP_Enter']"
   "/org/gnome/shell/extensions/gtile/theme": "'Default'"
-  "/org/gnome/shell/keybindings/switch-to-application-1": "@as []"
-  "/org/gnome/shell/keybindings/switch-to-application-2": "@as []"
-  "/org/gnome/shell/keybindings/switch-to-application-3": "@as []"
-  "/org/gnome/shell/keybindings/switch-to-application-4": "@as []"
+  "/org/gnome/shell/keybindings/screenshot": "['<Super>Print']"
+  "/org/gnome/shell/keybindings/screenshot-window": "['<Shift><Super>Print']"
+  "/org/gnome/shell/weather/automatic-location": "true"
+  "/org/gnome/shell/weather/locations": "[<(uint32 2, <('Göteborg', 'ESGP', true, [(1.0085094136262927, 0.2074032869608953)], [(1.007345872427158, 0.20885773963975227)])>)>]"
+
