--- a/ansible/roles/yubikey/tasks/ykfde.yml
+++ b/ansible/roles/yubikey/tasks/ykfde.yml
@@ -1,11 +1,10 @@
---- 
-
+---
 - name: Install yubikey-full-disk-encryption
   become: yes
   community.general.pacman:
-    pkg: 
+    pkg:
       - yubikey-full-disk-encryption
-      - python-pexpect                # required by ansible.builtin.expect
+      - python-pexpect # required by ansible.builtin.expect
 
 - name: "Check if YKFDE_CHALLENGE is defined"
   become: yes
@@ -13,7 +12,7 @@
   register: ykfde_challenge_defined
   failed_when: false
   changed_when: false
-    
+
 - name: Set is_ykfde_configured fact
   ansible.builtin.set_fact:
     is_ykfde_configured: "{{ ykfde_challenge_defined.rc == 0 }}"
@@ -24,29 +23,28 @@
     dest: /etc/ykfde.conf
     content: |
       YKFDE_CHALLENGE="{{ lookup('community.general.random_string', upper=false, special=false, length=64) }}"
-    mode: '600'
+    mode: "600"
   notify: "regenerate initramfs"
   when: not is_ykfde_configured
 
-
 - name: Remove possibly existing ykfde-key from LUKS
   become: yes
-  ansible.builtin.expect: 
+  ansible.builtin.expect:
     command: "cryptsetup luksKillSlot {{ partitions.luks.dev }} {{ykfde_luks_slot}}"
-    responses: 
+    responses:
       (?i)passphrase: "{{luks_password}}"
   failed_when: false
   when: not is_ykfde_configured
 
 - name: Enrol ykfde-key to LUKS
   become: yes
-  ansible.builtin.expect: 
+  ansible.builtin.expect:
     command: "ykfde-enroll -d {{ partitions.luks.dev }} -s {{ykfde_luks_slot}}"
     responses:
       Enter passphrase: "{{luks_password}}"
   when: not is_ykfde_configured
 
-- name: Add ykfde hook before encrypt hook in mkinitcpio.conf 
+- name: Add ykfde hook before encrypt hook in mkinitcpio.conf
   become: yes
   ansible.builtin.lineinfile:
     path: /etc/mkinitcpio.conf
