--- a/ansible/roles/office/tasks/main.yml
+++ b/ansible/roles/office/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install messengers
+- name: Install messengers/office/nextcloud
   become: true
   community.general.pacman:
     pkg:
@@ -7,9 +7,4 @@
       - telegram-desktop
       - thunderbird
       - libreoffice-fresh
-
-- name: Install nextcloud desktop sync client
-  become: yes
-  community.general.pacman:
-    pkg:
       - nextcloud-client
