--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -55,3 +55,50 @@ org_gnome_dconf:
   "/org/gnome/shell/keybindings/screenshot-window": "['<Shift><Super>Print']"
   "/org/gnome/shell/weather/automatic-location": "true"
   "/org/gnome/shell/weather/locations": "[<(uint32 2, <('Göteborg', 'ESGP', true, [(1.0085094136262927, 0.2074032869608953)], [(1.007345872427158, 0.20885773963975227)])>)>]"
+
+  "/org/gnome/desktop/app-folders/folder-children": "['Utilities', '47ce1235-4c48-43e9-939e-a50479f9e329', '42ad3479-54d7-45b1-a3ef-4f62466e4b7e', 'cdf373c8-e658-413e-ab96-c9743ae9fd62', 'bd2e0f00-08eb-40ed-bd57-6ababe362543', '0c691547-2560-4beb-8c2e-406a4c72026a', '6ebe2655-201a-45b0-8a5e-4323ca3fe92c', '6ec53523-91bd-496a-ae1c-dee04761af52', 'bee5124e-ec30-4b6f-af50-bc4055047763', '976fb2be-cf8c-4fef-b6d4-fa4ead81048f', 'bd25cccf-d6a0-4bed-a7b5-d12fade78753', 'b3816476-f81f-4e7c-8a93-33ee53432e46']"
+  "/org/gnome/desktop/app-folders/folders/0c691547-2560-4beb-8c2e-406a4c72026a/apps": "['org.gnome.Music.desktop', 'vlc.desktop', 'org.kde.digikam.desktop', 'org.gnome.Cheese.desktop', 'org.gnome.eog.desktop', 'org.gnome.Evince.desktop']"
+  "/org/gnome/desktop/app-folders/folders/0c691547-2560-4beb-8c2e-406a4c72026a/name": "'Multimedia'"
+
+  "/org/gnome/desktop/app-folders/folders/42ad3479-54d7-45b1-a3ef-4f62466e4b7e/apps": "['org.gnome.Photos.desktop', 'org.gnome.Totem.desktop']"
+  "/org/gnome/desktop/app-folders/folders/42ad3479-54d7-45b1-a3ef-4f62466e4b7e/name": "'Media'"
+  "/org/gnome/desktop/app-folders/folders/42ad3479-54d7-45b1-a3ef-4f62466e4b7e/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/47ce1235-4c48-43e9-939e-a50479f9e329/apps": "['avahi-discover.desktop', 'bssh.desktop', 'bvnc.desktop']"
+  "/org/gnome/desktop/app-folders/folders/47ce1235-4c48-43e9-939e-a50479f9e329/name": "'Avahi'"
+  "/org/gnome/desktop/app-folders/folders/47ce1235-4c48-43e9-939e-a50479f9e329/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/6ebe2655-201a-45b0-8a5e-4323ca3fe92c/apps": "['vscodium.desktop', 'org.gnome.TextEditor.desktop', 'org.gnome.gedit.desktop', 'nvim.desktop']"
+  "/org/gnome/desktop/app-folders/folders/6ebe2655-201a-45b0-8a5e-4323ca3fe92c/name": "'Editoren'"
+  "/org/gnome/desktop/app-folders/folders/6ebe2655-201a-45b0-8a5e-4323ca3fe92c/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/6ec53523-91bd-496a-ae1c-dee04761af52/apps": "['org.gnome.clocks.desktop', 'org.gnome.Weather.desktop', 'org.gnome.Maps.desktop']"
+  "/org/gnome/desktop/app-folders/folders/6ec53523-91bd-496a-ae1c-dee04761af52/name": "'Zubehör'"
+
+  "/org/gnome/desktop/app-folders/folders/976fb2be-cf8c-4fef-b6d4-fa4ead81048f/apps": "['firefox.desktop']"
+  "/org/gnome/desktop/app-folders/folders/976fb2be-cf8c-4fef-b6d4-fa4ead81048f/name": "'Internet'"
+
+  "/org/gnome/desktop/app-folders/folders/Utilities/apps": "['gnome-abrt.desktop', 'gnome-system-log.desktop', 'nm-connection-editor.desktop', 'org.gnome.baobab.desktop', 'org.gnome.Connections.desktop', 'org.gnome.DejaDup.desktop', 'org.gnome.Dictionary.desktop', 'org.gnome.DiskUtility.desktop', 'org.gnome.FileRoller.desktop', 'org.gnome.fonts.desktop', 'org.gnome.tweaks.desktop', 'org.gnome.Usage.desktop', 'vinagre.desktop', 'gnome-system-monitor.desktop', 'org.gnome.Extensions.desktop', 'yelp.desktop', 'org.gnome.Settings.desktop', 'ca.desrt.dconf-editor.desktop', 'org.gnome.Software.desktop', 'lstopo.desktop']"
+  "/org/gnome/desktop/app-folders/folders/Utilities/categories": "['X-GNOME-Utilities']"
+  "/org/gnome/desktop/app-folders/folders/Utilities/excluded-apps": "['org.gnome.eog.desktop', 'org.gnome.Evince.desktop', 'org.gnome.seahorse.Application.desktop']"
+  "/org/gnome/desktop/app-folders/folders/Utilities/name": "'System'"
+  "/org/gnome/desktop/app-folders/folders/Utilities/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/b3816476-f81f-4e7c-8a93-33ee53432e46/apps": "['org.keepassxc.KeePassXC.desktop', 'yubikey-personalization-gui.desktop', 'org.gnome.seahorse.Application.desktop']"
+  "/org/gnome/desktop/app-folders/folders/b3816476-f81f-4e7c-8a93-33ee53432e46/name": "'Sicherheit'"
+  "/org/gnome/desktop/app-folders/folders/b3816476-f81f-4e7c-8a93-33ee53432e46/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/bd25cccf-d6a0-4bed-a7b5-d12fade78753/apps": "['libreoffice-base.desktop', 'libreoffice-startcenter.desktop', 'libreoffice-calc.desktop', 'libreoffice-draw.desktop', 'libreoffice-impress.desktop', 'libreoffice-math.desktop', 'libreoffice-writer.desktop', 'org.gnome.Contacts.desktop', 'org.gnome.Calculator.desktop']"
+  "/org/gnome/desktop/app-folders/folders/bd25cccf-d6a0-4bed-a7b5-d12fade78753/name": "'Büro'"
+
+  "/org/gnome/desktop/app-folders/folders/bd2e0f00-08eb-40ed-bd57-6ababe362543/apps": "['signal-desktop.desktop', 'org.telegram.desktop.desktop']"
+  "/org/gnome/desktop/app-folders/folders/bd2e0f00-08eb-40ed-bd57-6ababe362543/name": "'Kommunikation'"
+  "/org/gnome/desktop/app-folders/folders/bd2e0f00-08eb-40ed-bd57-6ababe362543/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/bee5124e-ec30-4b6f-af50-bc4055047763/apps": "['com.nextcloud.desktopclient.nextcloud.desktop', 'transmission-gtk.desktop']"
+  "/org/gnome/desktop/app-folders/folders/bee5124e-ec30-4b6f-af50-bc4055047763/name": "'Sync'"
+  "/org/gnome/desktop/app-folders/folders/bee5124e-ec30-4b6f-af50-bc4055047763/translate": "false"
+
+  "/org/gnome/desktop/app-folders/folders/cdf373c8-e658-413e-ab96-c9743ae9fd62/apps": "['assistant.desktop', 'qvidcap.desktop', 'designer.desktop', 'linguist.desktop', 'qdbusviewer.desktop', 'qv4l2.desktop']"
+  "/org/gnome/desktop/app-folders/folders/cdf373c8-e658-413e-ab96-c9743ae9fd62/name": "'Qt'"
+  "/org/gnome/desktop/app-folders/folders/cdf373c8-e658-413e-ab96-c9743ae9fd62/translate": "false"
