--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -11,7 +11,7 @@ org_gnome_dconf:
   "/org/gnome/desktop/input-sources/xkb-options": "['terminate:ctrl_alt_bksp', 'compose:rctrl', 'lv3:ralt_switch', 'caps:escape']"
   "/org/gnome/desktop/interface/clock-show-seconds": "false"
   "/org/gnome/desktop/interface/clock-show-weekday": "false"
-  "/org/gnome/desktop/interface/color-scheme": "'prefer-dark'"
+  "/org/gnome/desktop/interface/color-scheme": "'default'"
   "/org/gnome/desktop/interface/font-antialiasing": "'grayscale'"
   "/org/gnome/desktop/interface/font-hinting": "'slight'"
   "/org/gnome/desktop/interface/show-battery-percentage": "false"
