feat(gnome): Define key binding for switch-input-source

--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -24,6 +24,8 @@ org_gnome_dconf:
   "/org/gnome/desktop/wm/keybindings/move-to-workspace-2": "['<Shift><Super>2']"
   "/org/gnome/desktop/wm/keybindings/move-to-workspace-3": "['<Shift><Super>3']"
   "/org/gnome/desktop/wm/keybindings/move-to-workspace-4": "['<Shift><Super>4']"
+  "/org/gnome/desktop/wm/keybindings/switch-input-source": "['<Super>k']"
+  "/org/gnome/desktop/wm/keybindings/switch-input-source-backward": "['<Shift><Super>k']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-1": "['<Super>1']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-2": "['<Super>2']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-3": "['<Super>3']"
